--- a/project/templates/result.html
+++ b/project/templates/result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classification Result</title>
-    <link rel="stylesheet" href="static/result_styles.css">
+    <link rel="stylesheet" href="/workspaces/computer-vision-project/project/static/result_styles.css">
 </head>
 <body>
     <div class="container">
